--------------------------------------------------------------------------------
Changes for 2.3.0

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 2.2.1rc1

New features:

Bug fixes:
..F....... [ZBX-7303] removed link to item configuration for discovered items in latest data screen (Eduard)
...G...... [ZBX-7289] added server address and port number to "no active checks on server" message (igors)
..F....... [ZBX-6920] fixed displaying of soft linked IT services (Eduard)
..F....... [ZBX-7037] added agent.hostname to the list of supported items (Pavels)
..F....... [ZBX-7317] removed unused code in popup.php (Ivo)

--------------------------------------------------------------------------------
Changes for 2.2.0

2.2.0rc2 was released as 2.2.0 without any changes

--------------------------------------------------------------------------------
Changes for 2.2.0rc2

Bug fixes:
..F....... [ZBXNEXT-1371] fixed links in global search results to LLD discovery for non-admin users to say "Discovery" instead of "Discoveries" (Richlv)
........S. [ZBX-7304] fixed wrong SQL statement in processing of escalations (asaveljevs)

--------------------------------------------------------------------------------
Changes for 2.2.0rc1

New features:
..F....... [ZBXNEXT-1513] set autofocus for the event acknowledgement text field (Pavels)
........S. [ZBXNEXT-1998] added vmware.fullname[], vmware.version[] key support (wiper)
..F.I...S. [ZBXNEXT-1975] increased the size of alerts table message field to 64KB also on Oracle database (Pavels, wiper)
..F....... [ZBXNEXT-1371] added links to graphs, web monitoring and LLD rules in the search results; thanks to Volker Fröhlich and Marc for patches (Pavels)
.........T [ZBX-6832] improved default templates (e.g., split "Template App Agentless" into 12 templates for each service) (asaveljevs, neogan, Sasha)